AAE-38730 Upgrade Activiti Cloud to java 25 (#1990)
* AAE-38730 Upgrade Activiti Cloud to java 25

* Add open rewrite changes

* pre checks

* compilation failure fix

* Rebase with activiti

* Fix test failures

* update acceptance tests pom

* Save process instance first

* Fix test failures

* modify builder

* Undo hibernate upgrade

* Rebase

* change to cornetto

* fix typo

* Increase assertion time

* corrections

* Rewrite changes

* remove local

* add depenency back

* revert assertions

* Update activiti.version to 0.0.1-PR-5185-2389-SNAPSHOT

* Remove hibernate related changes

* snapshot version

* Unused imports

* change activiti version

* java version

* activiti version

* new activiti version

* Activiti version

* remove commons

* rebase

* activiti version

* correct version number

* Use final version alpha 9.0.0 alpha 1

---------

Co-authored-by: Igor Dianov <igor@dianov.com>