@@ -107,7 +107,7 @@ public class KeycloakClientIT {
     @Test
     public void should_getUserGroups() {
         List<KeycloakUser> users = keycloakClient.searchUsers("hruser", 0, 50);
-        List<KeycloakGroup> groups = keycloakClient.getUserGroups(users.get(0).getId());
+        List<KeycloakGroup> groups = keycloakClient.getUserGroups(users.getFirst().getId());
 
         assertThat(users).hasSize(1);
         assertThat(groups).extracting("name").contains("hr");
@@ -137,7 +137,7 @@ public class KeycloakClientIT {
     @Test
     public void should_getUserRoles() {
         List<KeycloakUser> users = keycloakClient.searchUsers("hruser", 0, 50);
-        List<KeycloakRoleMapping> roles = keycloakClient.getUserRoleMapping(users.get(0).getId());
+        List<KeycloakRoleMapping> roles = keycloakClient.getUserRoleMapping(users.getFirst().getId());
 
         assertThat(roles).hasSize(1);
         assertThat(roles).extracting("name").contains(ACTIVITI_USER_ROLE);
@@ -146,7 +146,7 @@ public class KeycloakClientIT {
     @Test
     public void should_getGroupRoles() {
         List<KeycloakGroup> users = keycloakClient.searchGroups("salesgroup", 0, 50);
-        List<KeycloakRoleMapping> roles = keycloakClient.getGroupRoleMapping(users.get(0).getId());
+        List<KeycloakRoleMapping> roles = keycloakClient.getGroupRoleMapping(users.getFirst().getId());
 
         assertThat(roles).hasSize(1);
         assertThat(roles).extracting("name").contains(ACTIVITI_USER_ROLE);
@@ -157,7 +157,7 @@ public class KeycloakClientIT {
         Cache cache = cacheManager.getCache("groupRoleMapping");
         cache.clear();
         List<KeycloakGroup> users = keycloakClient.searchGroups("salesgroup", 0, 50);
-        String key = users.get(0).getId();
+        String key = users.getFirst().getId();
         assertThat(cache.get(key)).isNull();
 
         List<KeycloakRoleMapping> roles = keycloakClient.getGroupRoleMapping(key);
@@ -175,7 +175,7 @@ public class KeycloakClientIT {
         Cache cache = cacheManager.getCache("userGroups");
         cache.clear();
         List<KeycloakUser> users = keycloakClient.searchUsers("hruser", 0, 50);
-        String key = users.get(0).getId();
+        String key = users.getFirst().getId();
 
         assertThat(cache.get(key)).isNull();
 
@@ -194,7 +194,7 @@ public class KeycloakClientIT {
         Cache cache = cacheManager.getCache("userRoleMapping");
         cache.clear();
         List<KeycloakUser> users = keycloakClient.searchUsers("hruser", 0, 50);
-        String key = users.get(0).getId();
+        String key = users.getFirst().getId();
         assertThat(cache.get(key)).isNull();
 
         List<KeycloakRoleMapping> roles = keycloakClient.getUserRoleMapping(key);
@@ -241,8 +241,8 @@ public class KeycloakClientIT {
         List<KeycloakClientRepresentation> clients = keycloakClient.searchClients(ACTIVITI_CLIENT_ID, 0, 50);
 
         List<KeycloakRoleMapping> roles = keycloakClient.getUserClientRoleMapping(
-            users.get(0).getId(),
-            clients.get(0).getId()
+            users.getFirst().getId(),
+            clients.getFirst().getId()
         );
 
         assertThat(roles).hasSize(1);
@@ -255,8 +255,8 @@ public class KeycloakClientIT {
         List<KeycloakClientRepresentation> clients = keycloakClient.searchClients(ACTIVITI_CLIENT_ID, 0, 50);
 
         List<KeycloakRoleMapping> roles = keycloakClient.getGroupClientRoleMapping(
-            groups.get(0).getId(),
-            clients.get(0).getId()
+            groups.getFirst().getId(),
+            clients.getFirst().getId()
         );
 
         assertThat(roles).hasSize(1);
@@ -266,15 +266,15 @@ public class KeycloakClientIT {
     @Test
     public void should_getClientRoles() {
         List<KeycloakClientRepresentation> clients = keycloakClient.searchClients(ACTIVITI_CLIENT_ID, 0, 50);
-        List<KeycloakRoleMapping> roles = keycloakClient.getClientRoles(clients.get(0).getId());
+        List<KeycloakRoleMapping> roles = keycloakClient.getClientRoles(clients.getFirst().getId());
         assertThat(roles).isNotEmpty();
     }
 
     @Test
     public void should_addAndRemoveUserClientRoleMapping() {
         List<KeycloakClientRepresentation> clients = keycloakClient.searchClients(ACTIVITI_CLIENT_ID, 0, 50);
-        String clientId = clients.get(0).getId();
-        List<KeycloakRoleMapping> kRoles = keycloakClient.getClientRoles(clients.get(0).getId());
+        String clientId = clients.getFirst().getId();
+        List<KeycloakRoleMapping> kRoles = keycloakClient.getClientRoles(clients.getFirst().getId());
         KeycloakRoleMapping kRoleToAdd = kRoles
             .stream()
             .filter(kRole -> kRole.getName().equals(ACTIVITI_ADMIN_ROLE))
@@ -294,8 +294,8 @@ public class KeycloakClientIT {
     @Test
     public void should_addAndRemoveGroupClientRoleMapping() {
         List<KeycloakClientRepresentation> clients = keycloakClient.searchClients(ACTIVITI_CLIENT_ID, 0, 50);
-        String clientId = clients.get(0).getId();
-        List<KeycloakRoleMapping> kRoles = keycloakClient.getClientRoles(clients.get(0).getId());
+        String clientId = clients.getFirst().getId();
+        List<KeycloakRoleMapping> kRoles = keycloakClient.getClientRoles(clients.getFirst().getId());
         KeycloakRoleMapping kRoleToAdd = kRoles
             .stream()
             .filter(kRole -> kRole.getName().equals(ACTIVITI_USER_ROLE))
@@ -329,7 +329,7 @@ public class KeycloakClientIT {
     @Test
     public void should_getUsersClientRoleMapping() {
         List<KeycloakClientRepresentation> clients = keycloakClient.searchClients(ACTIVITI_CLIENT_ID, 0, 50);
-        String clientId = clients.get(0).getId();
+        String clientId = clients.getFirst().getId();
         List<KeycloakUser> users = keycloakClient.getUsersClientRoleMapping(clientId, ACTIVITI_ADMIN_ROLE);
 
         assertThat(users).hasSize(1);
@@ -339,7 +339,7 @@ public class KeycloakClientIT {
     @Test
     public void should_getGroupsClientRoleMapping() {
         List<KeycloakClientRepresentation> clients = keycloakClient.searchClients(ACTIVITI_CLIENT_ID, 0, 50);
-        String clientId = clients.get(0).getId();
+        String clientId = clients.getFirst().getId();
         List<KeycloakGroup> groups = keycloakClient.getGroupsClientRoleMapping(clientId, ACTIVITI_USER_ROLE);
 
         assertThat(groups).hasSize(1);
@@ -367,7 +367,7 @@ public class KeycloakClientIT {
     @Test
     public void should_get101Users_by_Role() {
         addUsers(101);
-        String clientId = testKeycloakClient.searchClients(ACTIVITI_CLIENT_ID, 0, 1).get(0).getId();
+        String clientId = testKeycloakClient.searchClients(ACTIVITI_CLIENT_ID, 0, 1).getFirst().getId();
         KeycloakRoleMapping kRoleToAdd = assignRole(clientId);
 
         List<KeycloakUser> users = keycloakClient.getUsersClientRoleMapping(
@@ -456,7 +456,7 @@ public class KeycloakClientIT {
         List<KeycloakClientRepresentation> clients = keycloakClient.findByClientId(ACTIVITI_CLIENT_ID);
         assertThat(clients).hasSize(1);
 
-        String idOfClient = clients.get(0).getId();
+        String idOfClient = clients.getFirst().getId();
         KeycloakClientRepresentation clientById = keycloakClient.getClientById(idOfClient);
 
         assertThat(clientById).isNotNull();
@@ -469,7 +469,7 @@ public class KeycloakClientIT {
 
         assertThat(allGroups).hasSizeGreaterThan(0);
 
-        KeycloakGroup groupById = keycloakClient.getGroupById(allGroups.get(0).getId());
+        KeycloakGroup groupById = keycloakClient.getGroupById(allGroups.getFirst().getId());
         assertThat(groupById).isNotNull();
     }
 
@@ -489,14 +489,14 @@ public class KeycloakClientIT {
 
         assertThat(allUsers).hasSizeGreaterThan(0);
 
-        KeycloakUser userById = keycloakClient.getUserById(allUsers.get(0).getId());
+        KeycloakUser userById = keycloakClient.getUserById(allUsers.getFirst().getId());
         assertThat(userById).isNotNull();
         assertThat(countAllUsers).isEqualTo(allUsers.size());
     }
 
     private String getIdOfClient(String clientId) {
         List<KeycloakClientRepresentation> clients = keycloakClient.findByClientId(clientId);
-        return clients.get(0).getId();
+        return clients.getFirst().getId();
     }
 
     @Test
